--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "user practice",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "npx nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
+    "nodemon": "^3.1.7",
     "uuid": "^11.0.2"
   }
 }
