--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
+    "mongoose": "^8.8.0",
     "nodemon": "^3.1.7",
     "uuid": "^11.0.2"
   }
