--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.21.1",
     "mongoose": "^8.8.0",
     "nodemon": "^3.1.7",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
+    "@types/validator": "^13.12.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
